--- a/epreuve/epreuveapk/templates/pages/dashboard.html
+++ b/epreuve/epreuveapk/templates/pages/dashboard.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="{% static 'tp2/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <script src="https://kit.fontawesome.com/b65d610015.js" crossorigin="anonymous"></script>
+
     <title>Bootstap 5 Responsive Admin Dashboard</title>
 </head>
 
