--- a/epreuve/epreuveapk/templates/pages/dashboard.html
+++ b/epreuve/epreuveapk/templates/pages/dashboard.html
@@ -14,6 +14,29 @@
     <script src="https://kit.fontawesome.com/b65d610015.js" crossorigin="anonymous"></script>
 
     <title>Bootstap 5 Responsive Admin Dashboard</title>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/6.0.0-beta.2/dropzone-min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/6.0.0-beta.2/dropzone.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <style type="text/css">
+        .dz {
+            border: dashed !important;
+            border-radius: 10px !important;
+        }
+        .dz:hover {
+            background-color: aliceblue !important;
+        }
+        .dz-success-mark{
+            background-color: unset !important;
+        }
+        .dz-success-mark svg{
+            background-color: green;
+            border-radius: 50%;
+            opacity: 0.7;
+        }
+    </style>
+
 </head>
 
 <body>
