--- a/epreuve/epreuveapk/templates/pages/epreuves.html
+++ b/epreuve/epreuveapk/templates/pages/epreuves.html
@@ -6,13 +6,8 @@
 
 <div class="container-fluid px-4">
     <div class="row g-3 my-2">
-        
-        <!-- Button trigger modal -->
-
   
   <!-- Modal -->
-   <form method="POST"  enctype="multipart/form-data">
-    {% csrf_token %}
   <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -22,25 +17,21 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-         
-            <label for=""> uniquement fichier .zip ; max 100Mo</label> <br><br>
-            <input type="file" accept=".zip,.pdf,.rar" name="filename" class="form-control">
-        
-        </div>
-        <div class="modal-footer">
-          <input type="submit"  class="btn btn-primary" value="Enregistrer" >
-          <button type="button" data-bs-dismiss="modal" aria-label="Close" class="btn btn-secondary">Annuler</button>
-          
-        </div>
+       
+          <div class="modal-body">
+              <form enctype='multipart/form-data' action="{% url 'addEpreuve' %}" method='POST' class="dropzone dz" id="my-dropzone" >
+                {% csrf_token %}
+              </form>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" data-bs-dismiss="modal" aria-label="Close" class="btn btn-secondary">Fermer</button>    
+          </div>
+       
       </div>
     </div>
   </div>
         
-  </form>
-
-
-
 
 
 
@@ -133,6 +124,26 @@
     </div>
 
 </div>
+
+
+<script type="text/javascript">
+
+  Dropzone.autoDiscover=false;
+  const myDropzone= new Dropzone('#my-dropzone',{
+      url: '{% url "addEpreuve" %}',
+      thumbnailWidth: 200,
+      maxFiles:100,
+      maxFilesize:100,
+      acceptedFiles:".pdf",
+      
+  });
+
+  myDropzone.on("queuecomplete", function (file) {
+    location.reload();
+});
+
+  </script>
+
 
 {% endblock %}
 
